# product-scanner

./: .gitignore  .pre-commit-config.yaml  DOCS.md  README.md  conftest.py  pyproject.toml
.github/workflows/: code-build-hello-world  tests.yml
assets/: ResultView.jsx
core/: Dockerfile  app.py  build_image.sh  constants.py  pyproject.toml  requirements.txt  test_lambda.py
core/app/: constants.py  decision_engine.py  enrich_products.py  handler.py  test_lambda.py  utils.py
core/scripts/: enrich_products.py  run_server.py  seed_products.py
core/tests/: test_alternatives.py  test_compute_fit_score.py  test_decision_summary.py  test_lambda.py
frontend/: .env  index.html  package.json
frontend/src/: App.jsx  constants.js
frontend/src/components/: LoadingState.jsx  ResultView.jsx  ScanStep.jsx
frontend/src/components/icons/: Icons.jsx
frontend/src/components/ui/: FitMeter.jsx  OutcomeBadge.jsx  PillTag.jsx  ReviewLine.jsx  SectionTitle.jsx  SubLabel.jsx
infra/: api_gateway.tf  db.tf  iam.tf  main.tf  outputs.tf  variables.tf  versions.tf
scripts/: enrich_products.py  seed_products.py
tests/: test_alternatives.py  test_compute_fit_score.py  test_decision_summary.py  test_lambda.py  test_recommend.py
