[build-system]
requires = ["setuptools~=77.0.3", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "product-scanner"
description = "Python backend for StyleCast Product Scanner"
dynamic = ["version"]
requires-python = ">=3.10,<3.15"
license = {text = "Apache-2.0"}

authors = [
    { name = "Okechukwu Emmanuel Ochia", email = "emmirald@gmail.com" }
]
dependencies = [
    "boto3",
    "fastapi",
    "uvicorn",
    "pydantic",
    "anthropic"
]
keywords = ["product-scanner", "cloud", "serverless", "infrastructure"]

[project.urls]
Homepage = "https://maximus-product-scanner.vercel.app"
Source = "https://github.com/Emmanuel289/product-scanner"

[tool.setuptools.packages.find]
include = ["app"]
exclude = ["tests*"]

[tool.mypy]
python_version = "3.11"
exclude = "build"
ignore_missing_imports = true
check_untyped_defs = true
no_strict_optional = true
namespace_packages = true

[tool.pytest.ini_options]
pythonpath = ["core/app"]
testpaths = ["core/tests"]

[tool.ruff]
extend-include = ["*.pyi"]
exclude = [
    '.venv',
    '.git',
    '__pycache__',
    'proto',
    'build'
]
line-length = 120
